--- a/output/abc-care_dataavailability.tex
+++ b/output/abc-care_dataavailability.tex
@@ -8,7 +8,7 @@
 \tiny
 \begin{tabular}{L{3cm} C{3.5cm} C{4cm} C{1.5cm} C{1.5cm}  C{6cm}}
 \toprule
-\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age (months)}  	&  \textbf{CARE Age (months)}  & 	\textbf{Measure}	\\ \midrule
 Demographics	&	Gender	&	Gender of subject	&	Birth, 18, 30, 42, 54	&	 Birth, 18, 30, 42, 54	&	Demographic Interview	\\
 	&	\\
 	&	Race	&	Race/Cultural identity of subject	&	Birth, 18, 30, 42, 54	&	 Birth, 18, 30, 42, 54	&	 Demographic Interview\\
@@ -65,7 +65,7 @@ Non-Cognitive Assessments	&	Social Skills	&	Positive social response	&	30, 36, 4
 \tiny
 \begin{tabular}{L{3cm} C{3.5cm} C{4cm} C{1.5cm} C{1.5cm}  C{6cm}}
 \toprule
-\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age (months)}  	&  \textbf{CARE Age (months)}  & 	\textbf{Measure}	\\ \midrule
 Family Environment	&	Family Members	&	Number of primary caretakers	&	Birth, 18, 30, 42, 54	&	18, 30, 42, 54, 60	&	Demographic Interview	\\
 	&		&	Relationship with family members, including father, mother, siblings, etc.	&	Birth, 18, 30, 42, 54	&	18, 30, 42, 54, 60	&	Demographic Interview	\\
 	&		&	Number of siblings	&	Birth, 18, 30, 42, 54	&	Birth, 18, 30, 42, 54, 60	&	Demographic Interview	\\
@@ -117,7 +117,7 @@ Physical Health	&	Growth Data	&	Height, Weight, Head circumference, etc.	&	3, 6,
 \tiny	
 \begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.5cm} C{6cm}}
 \toprule
-\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age (years)}  	&  \textbf{CARE Age (years)}  & 	\textbf{Measure}	\\ \midrule
 Cognitive Assessment	&	Language Ability	&	Adaptive Language Inventory	&	6, 7, 8	&	6, 7, 8	&	Adaptive Language Inventory	\\
 	&		&	Language Questionnaire	&	12	&	- 	&	Language Questionnaire$^{ABC}$	\\
 	&		&	MSCD 	&	7	&	- 	&	MSCD$^{ABC}$	\\
@@ -170,7 +170,7 @@ Non-Cognitive Assessment	&	Interpersonal Skills	&	Gets along with people	&	6, 8,
 \tiny
 \begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.5cm} C{6cm}}
 \toprule
-\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age (years)}  	&  \textbf{CARE Age (years)}  & 	\textbf{Measure}	\\ \midrule
 Family Environment	&	Family Members	&	Number of adults in house	&	6, 8, 12, 15	&	8, 12	&	PEI, Parent Interview, Subject Person In Household$^{ABC}$		\\
 	&		&	Relationship with family members, including father, mother, siblings, etc.	&	6, 8, 12, 15	&	8, 12	&	PEI, FES, SAI, Subject Interview$^{ABC}$, Adult Self Report$^{ABC}$, Parent Interview, Achenbach Parent	\\
 	&		&	Number of siblings	&	6, 8, 12, 15	&	7, 8, 12	&	PEI$^{ABC}$, Parent Interview	\\
@@ -220,7 +220,7 @@ Social Conduct	&	Law Breaking	&	Felony, Time spent incarcerated	&	15	&	- 	&	MARS
 \scriptsize										
 \begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.8cm} C{6cm}}										
 \toprule
-\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age (years)}  	&  \textbf{CARE Age (years)}  & 	\textbf{Measure}	\\ \midrule
 Cognitive Assessments   	&	       Intelligence Tests      	&	       WIS     	&	21	&	-	&	       WIS     \\
 \midrule										
 Non-Cognitive Assessment        	&	       Interpersonal Skills    	&	       Gets along with people  	&	       21, 30  	&	-	&	       Subject Interview   \\
@@ -272,7 +272,7 @@ Family Environment      	&	       Family Members  	&	       Number of adults in 
 \scriptsize
 \begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.8cm} C{6cm}}
 \toprule
-\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age (years)}  	&  \textbf{CARE Age (years)}  & 	\textbf{Measure}	\\ \midrule
 Physical Health	&	Health Insurance	&	Covered by health insurance	&	21, 30	&	21, 30	&	Subject Interview	\\
 \\											
 	&	Health Issues	&	Health conditions, diseases, regular checkups and tests, mental health	&	21, 30, mid-30's	&	21, 30, mid-30's	&	Brief Symptom Inventory, Subject Interview, Adult Self Report, Biomedical Survey	\\
