--- a/output/destable_ed_fam_abccare_0.tex
+++ b/output/destable_ed_fam_abccare_0.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{l c c r r r r c}
 \toprule
-& \mc{2}{c}{$ N $ } & \mc{2}{c}{Mean} & \mc{2}{c}{$ \sigma $ } & \mc{1}{c}{Two-sided} \\
+& \mc{2}{c}{$ N $ } & \mc{2}{c}{Mean} & \mc{2}{c}{Std. Dev.} & \mc{1}{c}{Two-sided} \\
 & \mc{1}{c}{Treat.} & \mc{1}{c}{Control} & \mc{1}{c}{Treat.} & \mc{1}{c}{Control} & \mc{1}{c}{Treat.} & \mc{1}{c}{Control} & \mc{1}{c}{$ t $ -test} \\
 & \mc{1}{c}{(1)} & \mc{1}{c}{(2)} & \mc{1}{c}{(3)} & \mc{1}{c}{(4)} & \mc{1}{c}{(5)} & \mc{1}{c}{(6)} & \mc{1}{c}{(7)} \\
 \midrule
